# markitdown-server

./: .dockerignore  Dockerfile  Dockerfile.github  README.md  main.py  pyproject.toml
.github/workflows/: ghcr.yml
